@@ -163,6 +163,7 @@ Various bugfixes, small features, and a few experimental things:
 * (bug 2067) Fixed crash on empty quoted HTML attribute
 * (bug 2079) Removed links to Special:Maintenance from movepagetext messages
 * Fix for reading incorrectly re-gzipped HistoryBlob entries
+* Generalize project namespace for Latin localization, update namespaces
 
 
 === Caveats ===
